--- a/komposed/sandbox-mysql-deployment.yaml
+++ b/komposed/sandbox-mysql-deployment.yaml
@@ -24,6 +24,13 @@ spec:
       labels:
         io.kompose.service: sandbox-mysql
     spec:
+#      initContainers:
+#        - name: init-mysql
+#          image: busybox
+#          command: [ 'sh', '-c', 'chmod 777 /var/lib/mysql57' ]
+##          volumeMounts:
+##            - mountPath: /var/lib/mysql57
+##              name: logica-sandbox-volume
       containers:
         - env:
             - name: MYSQL_PASSWORD
@@ -31,13 +38,13 @@ spec:
             - name: MYSQL_ROOT_PASSWORD
               value: password
           image: logicahealth/sandbox-mysql
-          livenessProbe:
-            exec:
-              command:
-                - /wait-for-db.sh
-            failureThreshold: 20
-            periodSeconds: 2
-            timeoutSeconds: 30
+#          livenessProbe:
+#            exec:
+#              command:
+#                - /wait-for-db.sh
+#            failureThreshold: 20
+#            periodSeconds: 2
+#            timeoutSeconds: 30
           name: sandbox-mysql
           ports:
             - containerPort: 3306
